# ROAM_Logger

./: .aider.chat.history.md  .aider.input.history  .gitignore  Aider_Gemini_3_pro.bat  Hatch Roam Logger.spec  README.md  ROAM_Logger-source-code.txt  RunAider.bat  check_structure.ps1  config.py  data.py  dialogs.py  index.html  installer.py  list_files.py  main.py  models.py  package-lock.json  package.json  simple_roam_populator.py  structure.txt  theme.py  tsconfig.json  vite.config.ts  widgets.py  workers.py
.github/workflows/: build.yml  release.yml
Aider Files/: list_python_scripts.py
archive/: Aider_Gemini_3_pro.bat
src/: App.tsx  WarmupOverlay.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  chat.html  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
