[package]
name = "roam-logger-tauri"
version = "0.1.2"
description = "ROAM Logger Application"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
headless_chrome = "1.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
