[package]
name = "roam-logger-tauri"
version = "0.4.1"
description = "ROAM Logger Application"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
headless_chrome = "1.0"
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.11", features = ["json"] }
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[profile.dev]
incremental = true

[profile.release]
opt-level = 1
incremental = true
lto = "off"
codegen-units = 256
